--- a/about.html
+++ b/about.html
@@ -88,27 +88,27 @@
 
     <section id="feature" class="section-p1" >
         <div class="fe-box">
-            <img src="/assets/fe-card01.jpg" alt="image">
+            <img src="assets/fe-card01.jpg" alt="image">
             <h6>Free shipping</h6>
         </div>
         
         <div class="fe-box">
-            <img src="/assets/fe-card02.jpg" alt="image">
+            <img src="assets/fe-card02.jpg" alt="image">
             <h6>Online Order</h6>
         </div>
 
         <div class="fe-box">
-            <img src="/assets/fe-card03.jpg" alt="image">
+            <img src="assets/fe-card03.jpg" alt="image">
             <h6>Save money</h6>
         </div>
 
         <div class="fe-box">
-            <img src="/assets/fe-card04.jpg" alt="image">
+            <img src="assets/fe-card04.jpg" alt="image">
             <h6>Promotion</h6>
         </div>
 
         <div class="fe-box">
-            <img src="/assets/fe-card05.jpg" alt="image">
+            <img src="assets/fe-card05.jpg" alt="image">
             <h6>Free shipping</h6>
         </div>
 
