--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
 
     <section id="feature" class="section-p1" >
         <div class="fe-box">
-            <img src="assets/fe-card01.jpg" alt="image">
+            <img src="/assets/fe-card01.jpg" alt="image">
             <h6>Free shipping</h6>
         </div>
         
